--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "dayjs": "^1.11.13",
     "framer-motion": "^12.23.6",
     "jwt-decode": "^4.0.0",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
@@ -29,6 +30,7 @@
     "react-hook-form": "^7.60.0",
     "react-icons": "^5.5.0",
     "react-image-lightbox": "^5.1.4",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.6.3",
     "react-slider": "^2.0.6",
     "recharts": "^3.1.0",
