--- a/client/package.json
+++ b/client/package.json
@@ -29,13 +29,17 @@
     "react-hook-form": "^7.60.0",
     "react-icons": "^5.5.0",
     "react-image-lightbox": "^5.1.4",
+    "react-intersection-observer": "^9.16.0",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.6.3",
     "react-slider": "^2.0.6",
+    "react-window": "^1.8.11",
+    "react-window-infinite-loader": "^1.0.10",
     "recharts": "^3.1.0",
     "socket.io-client": "^4.8.1",
     "sonner": "^2.0.6",
     "tailwindcss": "^4.1.11",
+    "workbox-webpack-plugin": "^7.3.0",
     "yet-another-react-lightbox": "^3.24.0"
   },
   "devDependencies": {
